charts/loki/istio/loki.virtual-service.yaml
#@ load("@ytt:data", "data")
#@ if data.values.istio.enabled:
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: loki-istio-virtual-service
  namespace: #@ data.values.namespace
  labels:
    app: gerrit-monitoring
spec:
  hosts:
  - #@ data.values.logging.loki.host
  gateways:
  - monitoring-istio-gateway
  http:
  - route:
    - destination:
        host: #@ "loki-{}.{}.svc.cluster.local".format(data.values.namespace, data.values.namespace)
        port:
          number: 3100
#@ end
